--- a/index.html
+++ b/index.html
@@ -25,13 +25,17 @@
         <form>
             <label for="name">Name</label>
             <input type="text" id="name" name="name" placeholder="Your name" />
+            <br>
             <label for="email">Email</label>
             <input type="text" id="email" name="email" placeholder="Enter Email"> 
+            <br>
             <label for="subject">Subject</label>
-            <textarea id="subject" name="subject" placeholder="How can I help?"
+            <textarea id="subject" name="subject" placeholder="How can I help?
             style="height:250px">
+            <br>
             </textarea>           
             <input type="submit" value="Submit">
+            <br>
         </form>
       </section>
     </main>
